--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -2,10 +2,6 @@
 = General Requirements
 
 
-
-
-
-
 Before you begin your installation, check that your environment meets these requirements:
 
 * Current {scc} organization credentials
@@ -57,3 +53,9 @@ endif::[]
 Download {slsa}{nbsp}15{nbsp}SP1 or higher from https://www.suse.com/products/server/download/[SUSE Linux Enterprise Server - Media Download]
 
 //TODO: What about Uyuni?
+
+[[installation-general-supportedbrowsers]]
+== Supported Browsers for the {susemgr} {webui}
+
+In order to use the {webui} to manage your {susemgr} environment, you will need to ensure you are running an up to date web browser.
+{susemgr} is supported on the latest {sle} and Unix-based web browsers, as well as Windows and MacOS.
