Updates per feedback from Klaus (via email)

--- a/modules/installation/pages/general-requirements.adoc
+++ b/modules/installation/pages/general-requirements.adoc
@@ -54,8 +54,15 @@ Download {slsa}{nbsp}15{nbsp}SP1 or higher from https://www.suse.com/products/se
 
 //TODO: What about Uyuni?
 
+
+
 [[installation-general-supportedbrowsers]]
 == Supported Browsers for the {susemgr} {webui}
 
 In order to use the {webui} to manage your {susemgr} environment, you will need to ensure you are running an up to date web browser.
-{susemgr} is supported on the latest {sle} and Unix-based web browsers, as well as Windows and MacOS.
+
+{susemgr} is supported on:
+
+* Latest Firefox browser shipped with {slsa}
+* Latest Edge browser shipped with Windows
+* Latest Chrome/Chromium browser on all operating systems
