Managing Guests section

--- a/modules/administration/pages/virt-xenkvm.adoc
+++ b/modules/administration/pages/virt-xenkvm.adoc
@@ -234,47 +234,23 @@ If a guest installation starts while another one is still running, the running i
 
 
 
+== Manage VM Guests
 
 
+You can use the {productname} {webui} to manage your VM Guests, including actions like shutting downa nd restarting, and adjusting CPU and memory allocations.
 
+To do this, you will need your Xen or KVM VM host registered to the {productname} Server, and have the [daemon]``libvirtd`` service running on the host.
+You will also need the [package]``mgr-cfg-actions`` package installed on your {productname} Server.
 
+In the {productname} {webui}, navigate to menu:Systems[System List], and click on the VM host for the guests you want to manage.
+Navigate to the [guimenu]``Virtualization`` tab to see all guests registered to this host, and access the management functions.
 
+For more information on managing VM guests using the {webui}, see xref:reference:systems/system-details/sd-virtualization.adoc[].
 
+////
+This content needs to be moved to the Reference Guide. LKB 2019-07-15
 
-
-
-
-
-
-
-
-
-
-
-
-[sec.virtualization.vmguest-manage]]
-== Managing {vmguest}s
-
-
-If you want to manage the {vmhost} system from {productname} (for example, by executing remote scripts), the package [package]``mgr-cfg-actions`` needs to be installed as well.
-
-Basic {vmguest} management actions such as restarting or shutting down a virtual machine as well as changing the CPU and memory allocation can be carried out in the {productname} Web interface if the following requirements are met:
-
-* {vmhost} must be a {kvm} or {xen} host.
-* [daemon]``libvirtd`` must be running on {vmhost}.
-* {vmhost} must be registered with {productname}.
-
-In addition, if you want to see the profile of the {vmguest}, install packages, etc., you must also register it with {productname}.
-
-All actions can be triggered in the {productname} {webui} from the [guimenu]``Virtualization`` page of the {vmhost}.
-Navigate to this page by clicking the menu:Main Menu[Systems > Systems].
-On the resulting page, click the {vmhost}'s name and then on [guimenu]``Virtualization``.
-This page lists all {vmguest}s for this host, known to {productname}.
-
-
-
-[[sec.virtualization.vmguest-manage.details]]
-=== Displaying a {vmguest} 's Profile
+.Procedure: Displaying a Guest Profile
 
 Click the name of a {vmguest} on the {vmhost}'s [guimenu]``Virtualization`` page to open its profile page with detailed information about this guest.
 For details, refer to <<ref.webui.systems.systems>>.
