--- a/modules/administration/pages/virt-vmware.adoc
+++ b/modules/administration/pages/virt-vmware.adoc
@@ -1,76 +1,16 @@
 [[virt-vmware]]
 = Virtualization with VMWare
 
+You can use VMWare vSphere virtual machines, including ESXi and vCenter, with {productname} by setting up a virtual host manager, or VHM.
+
+To begin, you will need to set up a VHM on your {productname} Server, and inventory the available VM hosts.
+Taskomatic can then begin data collection using the VMs API.
+
+
+== VHM Setup
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-////
-
-Old content below here
-
-Virtual Hosts are hypervisors provided by a third party.
-Virtual Host Managers (VHMs) can be used to manage one or more virtual hosts, and each virtual host can contain one or more virtual guests.
-
-In {productname}, VHMs can be based on VMWare, or created from a JSON file.
-
-
-
-After your VHM has been created and configured, Taskomatic will run data collection automatically.
-You can also begin data collection manually through the {webui}, by navigating to menu:Systems[Virtual Host Managers], selecting the appropriate VHM, and clicking btn:[Refresh Data].
-
-{productname} ships with a tool called [command]``virtual-host-gatherer`` that can connect to VHMs using their API, and request information about virtual hosts.
-[command]``virtual-host-gatherer`` maintains the concept of optional modules, where each module enables a specific VHM.
-This tool is automatically invoked nightly by Taskomatic.
-Log files for the [command]``virtual-host-gatherer`` tool are located at [path]``/var/log/rhn/gather.log``.
-
-[[vhm-vmware]]
-= VMWare-based Virtual Hosts
-
-
-
-[[advanced.topics.adding.vmware.esxi.host]]
-== Inventorying vCenter/vSphere ESXi Hosts with {productname}
 
 Foreign virtual hosts (such as vCenter and vSphere ESXi) can be inventoried using the [guimenu]``Virtual Host Manager``.
 From the vSphere Client you can define roles and permissions for vCenter and vSphere ESXi users allowing vSphere objects and resources to be imported and inventoried by {productname}.
@@ -185,3 +125,12 @@ If this occurs, refreshing the data from the virtual hosts server will fail.
 To correct the problem, extract the certificate from the ESXi server, and copy it to [path]``/etc/pki/trust/anchors``.
 Re-trust the certificate by running the [command]``update-ca-certificates`` command on the command line, and restart the spacewalk services.
 ====
+
+
+After your VHM has been created and configured, Taskomatic will run data collection automatically.
+You can also begin data collection manually through the {webui}, by navigating to menu:Systems[Virtual Host Managers], selecting the appropriate VHM, and clicking btn:[Refresh Data].
+
+{productname} ships with a tool called [command]``virtual-host-gatherer`` that can connect to VHMs using their API, and request information about virtual hosts.
+[command]``virtual-host-gatherer`` maintains the concept of optional modules, where each module enables a specific VHM.
+This tool is automatically invoked nightly by Taskomatic.
+Log files for the [command]``virtual-host-gatherer`` tool are located at [path]``/var/log/rhn/gather.log``.
