--- a/modules/administration/pages/virtualization.adoc
+++ b/modules/administration/pages/virtualization.adoc
@@ -8,7 +8,7 @@ If you choose to, you can install several virtual hosts to manage groups of gues
 The range of capabilities that virtualized clients have depends on the third-party virtualization provider you choose.
 
 Xen and KVM hosts and guests can be managed directly in {productname}.
-This enables you to autoinstall hosts and guests using {ay} or {kickstart}, and manage guests in the same way as you manage other clients.
+This enables you to autoinstall hosts and guests using {ay} or {kickstart}, and manage guests in the {webui}}.
 
 For VMWare, including VMWare vSphere, {productname} requires you to set up a virtual host manager, or VHM, to control the VMs.
 This gives you control over the hosts and guests, but in a more limited way than available with Xen and KVM.
@@ -17,3 +17,10 @@ This gives you control over the hosts and guests, but in a more limited way than
 
 Other third-party virtualization providers are not directly supported by {productname}.
 However, if your provider allows you to export a JSON configuration file for the VM, you can upload that configuration file to {productname} and manage it with a VHM.
+
+////
+We could probably use a diagram here, to convey the meaning behind this:
+Virtual Host Managers (VHMs) can be used to manage one or more virtual hosts.
+Virtual Hosts are hypervisors provided by a third party.
+Each virtual host can contain one or more virtual guests.
+--LKB 2017-07-15
