Update per feedback

--- a/modules/administration/pages/tuning-changelogs.adoc
+++ b/modules/administration/pages/tuning-changelogs.adoc
@@ -18,7 +18,7 @@ You can delete cached data from the command line, using the SQL interface:
 
 [IMPORTANT]
 ====
-Deleting cached data can take a long time.
+This process can take a long time.
 Depending on the number of channels you have and the amount of data to be deleted, it can potentially take several hours.
 The task is run in the background by Taskomatic, so you can continue to use {productname} while the operation completes, however you should expect some performance loss.
 ====
