--- a/modules/administration/pages/virt-vmware.adoc
+++ b/modules/administration/pages/virt-vmware.adoc
@@ -7,116 +7,39 @@ To begin, you will need to set up a VHM on your {productname} Server, and invent
 Taskomatic can then begin data collection using the VMs API.
 
 
+
 == VHM Setup
 
 
+The Virtal Host Manager (VHM) runs on the {productname} Server.
+
+To run a VHM, your {productname} Server will need to have port 443 open, in order to access the VMWare API.
+
+VMWare hosts use access roles and permissions to control access to hosts and guests.
+Ensure that any VMWare objects or resources that you want to be inventoried by the VHM have at least [parameter]``read-only`` permissions.
+If you want to exclude any objects or resources, mark them with [parameter]``no-access``.
+
+When you are adding new hosts to {productname}, you will need to consider if the roles and permissions that have been assigned to users and objects need to be inventoried by {productname}.
+
+For more on users, roles, and permissions, see the VMWare vSphere documentation: https://docs.vmware.com/en/VMware-vSphere/index.html
 
 
-Foreign virtual hosts (such as vCenter and vSphere ESXi) can be inventoried using the [guimenu]``Virtual Host Manager``.
-From the vSphere Client you can define roles and permissions for vCenter and vSphere ESXi users allowing vSphere objects and resources to be imported and inventoried by {productname}.
-Objects and resources are then displayed as foreign hosts on the {productname} menu:System List[Virtual Systems] page.
+.Procedure: Creating a VMWare VHM
 
-The following sections will guide you through:
+. In the {productname} {webui}, navigate to menu:Systems[Virtual Host Managers].
+. Click btn:[Create] and select [guimenu]``VMWare-based``.
+. In the [guimenu]``Add a VMWare-based Virtual Host Manager`` section, use these parameters:
+* In the [guimenu]``Label`` field, type a custom name for your VHM.
+* In the [guimenu]``Hostname`` field, type the fully-qualified domain name (FQDN) or host IP address.
+* In the [guimenu]``Port`` field, type the ESXi API port to use (for example, [parameter]``443``.)
+* In the [guimenu]``Username`` field, type the username associated with the VM host.
+* In the [guimenu]``Password`` field, type the password associated with the VM host user.
+. Click btn:[Create] to save your changes and create the VHM.
+. On the [guimenu]``Virtual Host Managers`` page select the new VHM.
+. On the [guimenu]``Properties`` page, click btn:[Refresh Data] to inventory the new VHM.
 
-* Requirements
-* Overview of permissions and roles
-* Adding vCenter and vSphere ESXi hosts to {productname}
+To see which objects and resources have been inventoried, navigate to menu:Systems[System List > Virtual Systems].
 
-
-
-
-== Requirements
-
-This table displays the default API communication port and required access rights for inventorying objects and resources:
-
-[cols="1,1", options="header"]
-|===
-| Ports / Permissions | Description
-| 443 | Default port that {productname} uses to access the ESXi API for obtaining infrastructure data
-| read-only | All vCenter/ESXi objects and resources that should be inventoried by the Virtual Host Manager should be at least assigned the _read-only_ role.
-Mark objects and resources with _no-access_ to exclude them from the inventory.
-|===
-
-
-
-== Permissions and Roles Overview
-
-This section will guide you through assigning user permissions and roles in vCenter/ESXi.
-
-A user is someone who has been authorized to access an ESXi host.
-The Virtual Host Manager (located on the SUSE Manager server) will inventory ESXi data defined by assigned roles and permissions on a user account.
-
-For example: The user _John_ has been assigned the _read-only_ access role to all servers and datacenters in his company with one exception.
-John's account has been assigned the _no-access_ role on the company's _Financial Database server_.
-You decide to use John's user account and add the ESXi host to SUSE Manager.
-During the inventory the _Financial Database server_ will be excluded.
-
-Keep user access roles in mind when planning to add ESXi hosts to SUSE manager.
-Note that SUSE Manager will not inventory any objects or resources assigned with the _no-access_ role on any user account.
-
-
-[TIP]
-.User Roles/Permissions
-====
-When planning to add new ESXi hosts to SUSE Manager, consider if the roles and permissions assigned users require need to be inventoried by SUSE Manager.
-====
-
-
-
-== Adding New Users and Assigning Roles
-
-See the official vSphere documentation on adding new users and assigning roles.
-
-* https://pubs.vmware.com/vsphere-50/index.jsp#com.vmware.vsphere.security.doc_50/GUID-D7AEC653-EBC8-4573-B990-D8E58742F8ED.html[Authentication and User Management]
-
-
-
-== Inventorying vCenter/vSphere ESXi Hosts
-
-This procedure guides you through inventorying a VSphere ESXi host with {productname}.
-
-. From the {productname} {webui} select menu:Main Menu[Systems > Virtual Host Managers] from the left navigation bar.
-. From the upper right corner of the _Virtual Host Managers_ page select btn:[Create] VMWare-based.
-. From the _Add a VMware-based Virtual Host Manager_ page complete these fields with your ESXi host data:
-
-Label::
-Custom name for your Virtual Host Manager
-
-Hostname::
-Fully-qualified domain name (FQDN) or host IP address
-
-Port::
-Default ESXi API port
-
-Username::
-Assign a username
-+
-
-[IMPORTANT]
-====
-Only objects and resources that match a user's defined role will be inventoried.
-Set the user's role on objects and resources you want inventoried to _read-only_.
-====
-+
-
-Password::
-ESXi users password
-+
-
-image::systems_virtual_host_managers_vmware.png[scaledwidth=80%]
-
-. Click the btn:[Create] button.
-. From the menu:Systems[Virtual Host Managers] page select the new Virtual Host manager.
-. From the menu:Virtual Host Managers[Properties] page click the btn:[Refresh] button.
-+
-
-[IMPORTANT]
-====
-If you do not refresh the data from a new Virtual Host Manager, host data will not be inventoried and therefore will not be displayed under menu:System List[Virtual Systems].
-====
-+
-
-. View inventoried ESXi host objects and resources by selecting menu:System List[Virtual Systems].
 
 [NOTE]
 ====
@@ -126,9 +49,8 @@ To correct the problem, extract the certificate from the ESXi server, and copy i
 Re-trust the certificate by running the [command]``update-ca-certificates`` command on the command line, and restart the spacewalk services.
 ====
 
-
 After your VHM has been created and configured, Taskomatic will run data collection automatically.
-You can also begin data collection manually through the {webui}, by navigating to menu:Systems[Virtual Host Managers], selecting the appropriate VHM, and clicking btn:[Refresh Data].
+If you want to manually perform data collection, navigate to menu:Systems[Virtual Host Managers], select the appropriate VHM, and click btn:[Refresh Data].
 
 {productname} ships with a tool called [command]``virtual-host-gatherer`` that can connect to VHMs using their API, and request information about virtual hosts.
 [command]``virtual-host-gatherer`` maintains the concept of optional modules, where each module enables a specific VHM.
